--- a/Kingdom.html
+++ b/Kingdom.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kingdom.com</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Kingdom.css">
 </head>
 <body>
@@ -17,7 +20,7 @@
            <input type="password" name="Name" id="MN" placeholder="Password" maxlength="16" required> 
            <input type="number" name="Name" id="MN" placeholder="Number" maxlength="11"> 
            <div> 
-             <a class="A1" href="Kingdom2.html" target="_self"><button type="submit" class="B1"><p>Submit</p>
+             <a class="A1" href="kingdom2.html" target="_self"><button type="submit" class="B1"><p>Submit</p>
              </a>
               </button>
         </div>
