--- a/Kingdom2.html
+++ b/Kingdom2.html
@@ -27,7 +27,7 @@
     <section class="S1">
         <div class="home"> <a href="#">Home</a></div>
             <div class="welcome"><a href="#">Welcome</a></div>
-            <div><img class="img1" src="" alt=""></div>
+            <div><img class="img1" src="kmage.jpg" alt=""></div>
             <div class="p1"><p>Kingdom (キングダム Kingudamu) is a
                  Japanese seinen manga series written and i
                  llustrated by Yasuhisa Hara (原泰久), pub
